# transmission-lever

./: .gitignore  README.md  pyproject.toml  transmission-lever.json.example
src/: qlever.py  tlever.py
src/core/: client.py  config.py
src/extra/: clog.py  tier.py
src/transmission-lever/core/: config.py  torrent.py
src/transmission-lever/extra/: category.py  clog.py  tier.py
src/transmission_lever/: tlever.py
src/transmission_lever/core/: label.py
src/transmission_lever/extra/: category.py  clog.py  tag.py  tier.py  tui.py
