[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transmission-lever"
version = "0.1.0"
authors = [
  { name="Tom Villegas", email="tvillega@dcc.uchile.cl" },
]
description = " Small program that simplifies common chores on multiple torrents (currently only supports Transmission)."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]
keywords = ["torrent", "transmission", "manage", "seed"]
dependencies = [
    "transmission-rpc"
]

[project.scripts]
tlever = "transmission_lever.tlever:main"

[project.urls]
Homepage = "https://github.com/tvillega/transmission-lever"
Issues = "https://github.com/tvillega/transmission-lever"